--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,12 +33,13 @@
         "static/scss/reset.scss",
         "static/scss/variable.scss",
         "static/scss/layout.scss",
+        "static/scss/header.scss",
         "static/scss/sidebar.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
