--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,13 +6,17 @@
     {
       "path": "static/scss/base.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"static/css/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "static/scss/admin/index.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "static",
       "static/scss",
-      "static/css"
+      "static",
+      "static/scss/admin"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -34,7 +38,10 @@
         "static/scss/variable.scss",
         "static/scss/layout.scss",
         "static/scss/header.scss",
-        "static/scss/sidebar.scss"
+        "static/scss/sidebar.scss",
+        "static/scss/login.scss",
+        "static/scss/superadmin/index.scss",
+        "static/scss/mobile.scss"
       ]
     }
   ],
@@ -47,25 +54,10 @@
       "less",
       "sass",
       "scss",
-      "styl",
       "md",
       "markdown",
       "coffee",
-      "js",
-      "jade",
-      "haml",
-      "slim",
-      "ls",
-      "kit",
-      "png",
-      "jpg",
-      "jpeg",
-      "ts",
-      "pug",
-      "css",
-      "html",
-      "htm",
-      "php"
+      "css"
     ]
   },
   "pathFilters": [
