Commented and refactoring

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,13 +10,18 @@
     {
       "path": "static/scss/admin/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "static/scss/mobile/mobilebase.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"static/css/mobile.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "static/scss",
       "static",
-      "static/scss/admin"
+      "static/scss/admin",
+      "static/scss",
+      "static/scss/mobile"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -40,8 +45,15 @@
         "static/scss/header.scss",
         "static/scss/sidebar.scss",
         "static/scss/login.scss",
-        "static/scss/superadmin/index.scss",
-        "static/scss/mobile.scss"
+        "static/scss/superadmin/index.scss"
+      ]
+    },
+    {
+      "path": "static/scss/mobile/mobilebase.scss",
+      "imports": [
+        "static/scss/mobile/layout.scss",
+        "static/scss/mobile/header.scss",
+        "static/scss/mobile/login.scss"
       ]
     }
   ],
