Minor css change

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,7 +45,8 @@
         "static/scss/header.scss",
         "static/scss/sidebar.scss",
         "static/scss/login.scss",
-        "static/scss/superadmin/index.scss"
+        "static/scss/superadmin/index.scss",
+        "static/scss/superadmin/schoolpage.scss"
       ]
     },
     {
@@ -53,7 +54,8 @@
       "imports": [
         "static/scss/mobile/layout.scss",
         "static/scss/mobile/header.scss",
-        "static/scss/mobile/login.scss"
+        "static/scss/mobile/login.scss",
+        "static/scss/mobile/superadmin/index.scss"
       ]
     }
   ],
