--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,13 +40,15 @@
       "path": "static/scss/base.scss",
       "imports": [
         "static/scss/reset.scss",
+        "static/scss/extended.scss",
         "static/scss/variable.scss",
         "static/scss/layout.scss",
         "static/scss/header.scss",
         "static/scss/sidebar.scss",
         "static/scss/login.scss",
         "static/scss/superadmin/index.scss",
-        "static/scss/superadmin/schoolpage.scss"
+        "static/scss/superadmin/schoolpage.scss",
+        "static/scss/superadmin/programmeAdd.scss"
       ]
     },
     {
@@ -55,7 +57,9 @@
         "static/scss/mobile/layout.scss",
         "static/scss/mobile/header.scss",
         "static/scss/mobile/login.scss",
-        "static/scss/mobile/superadmin/index.scss"
+        "static/scss/mobile/superadmin/index.scss",
+        "static/scss/mobile/superadmin/schoolpage.scss",
+        "static/scss/mobile/superadmin/programmeadd.scss"
       ]
     }
   ],
